// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App hideAlert should return an action 1`] = `
Object {
  "payload": Object {
    "id": "test",
  },
  "type": "HIDE_ALERT",
}
`;

exports[`App showAlert with variant \`error\` should return an action 1`] = `
Object {
  "payload": Object {
    "icon": undefined,
    "id": "test",
    "message": "Alright!",
    "position": "bottom-right",
    "timeout": 0,
    "variant": "danger",
  },
  "type": "SHOW_ALERT",
}
`;

exports[`App showAlert with variant \`success\` should return an action 1`] = `
Object {
  "payload": Object {
    "icon": undefined,
    "id": "test",
    "message": "Alright!",
    "position": "bottom-right",
    "timeout": 10,
    "variant": "success",
  },
  "type": "SHOW_ALERT",
}
`;
